# eo-embed-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_point_extraction.py
examples/: 00_points_only.py  00_small_rectangle.py  01_quickstart.py  02_linear_probe_example.py  03_alphaearth_points.py
src/eoembed/: __init__.py  cache.py  hpc.py  metadata.py  sample.py  search.py
src/eoembed/sources/: __init__.py  alphaearth.py  base.py  tessera.py
